# CapCut

./: .gitignore  集成方案.md
VideoCreatorCpp/: CMakeLists.txt  Note.md  README.md  config.json  test_config.json
VideoCreatorCpp/assets/: README.md
VideoCreatorCpp/src/: main.cpp
VideoCreatorCpp/src/decoder/: AudioDecoder.cpp  AudioDecoder.h  ImageDecoder.cpp  ImageDecoder.h
VideoCreatorCpp/src/engine/: RenderEngine.cpp  RenderEngine.h
VideoCreatorCpp/src/ffmpeg_utils/: AvFrameWrapper.h  FFmpegHeaders.h
VideoCreatorCpp/src/filter/: EffectProcessor.cpp  EffectProcessor.h
VideoCreatorCpp/src/model/: ConfigLoader.cpp  ConfigLoader.h  ProjectConfig.h
media/: .gitignore  CMakeLists.txt  Main.qml  MediaView.qml  Note.md  README.md  audiodecoder.cpp  audiodecoder.h  audioplayer.cpp  audioplayer.h  decoderworker.cpp  decoderworker.h  demuxer.cpp  demuxer.h  ffmpeg_resource_manager.h  filemanager.cpp  filemanager.h  imagedecoder.cpp  imagedecoder.h  imageviewer.cpp  imageviewer.h  imediaplayer.h  main.cpp  media_api.cpp  media_api.h  mediacontroller.cpp  mediacontroller.h  videodecoder.cpp  videodecoder.h  videoplayer.cpp  videoplayer.h  videoplayer_impl.cpp  videoplayer_impl.cpp.bak  videoplayer_impl.h  架构分析报告.md  重构总结.md
